# lobster

./: .env.example  .gitignore  .lobster_memory_index.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LOBSTER_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SKILL.md  pyproject.toml  test_doc.txt
.github/workflows/: ci.yml
.lobster_memory/: index.faiss  index.pkl
.lobster_vector_store/: index.faiss  index.pkl
src/lobster/: __init__.py  __main__.py
src/lobster/commands/: __init__.py  api_cmd.py  batch.py  client_cmd.py  code_cmd.py  config_cmd.py  data_cmd.py  datax_cmd.py  doc_tool_cmd.py  doctor.py  document.py  history.py  invest_cmd.py  llm.py  memory.py  model.py  notify_cmd.py  openclaw_cmd.py  plugin_cmd.py  project_cmd.py  rag.py  rag_cmd.py  scheduler_cmd.py  search_cmd.py  serena_cmd.py  shortcut.py  template.py  util.py  util_cmd.py  watch_cmd.py  webhook_cmd.py
src/lobster/core/: __init__.py  cache.py  chat_session.py  config.py  errors.py  investment.py  llm_client.py  logger.py  memory_store.py  plugin.py  serena_client.py  stats.py  tools.py
src/lobster/plugins/: __init__.py
src/lobster/web/: __init__.py  app.py
tests/: conftest.py  test_api_cmd.py  test_cache.py  test_commands.py  test_config.py  test_data_cmd.py  test_datax_cmd.py  test_doctor.py  test_errors.py  test_invest_cmd.py  test_llm_client.py  test_logger.py  test_memory_store.py  test_model.py  test_notify_cmd.py  test_project_cmd.py  test_rag_cmd.py  test_scheduler_cmd.py  test_search_cmd.py  test_stats.py  test_template.py  test_util.py  test_webhook_cmd.py
