[project]
name = "lobster"
version = "0.1.0"
description = "Lobster - OpenClaw Assistant CLI Tool"
authors = [
    {name = "OpenClaw Team"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
keywords = ["lobster", "openclaw", "cli", "assistant", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
web = [
    "streamlit>=1.30.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
watch = [
    "watchdog>=3.0.0",
]
http = [
    "requests>=2.31.0",
]
serena = [
    "serena-agent>=1.1.0",
]
investment = [
    "tushare>=1.3.0",
    "requests>=2.31.0",
]
all = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "streamlit>=1.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "serena-agent>=1.1.0",
    "tushare>=1.3.0",
]

[project.scripts]
lobster = "lobster.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lobster"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
